# wl_monitor

./: .gitignore  do_all_gateway.sh  environment.yml
esp32/: test_connection.ipynb
esp32/micropython_scripts/: README.md  flash.py
esp32/monitor/: main.py
esp32/monitor/lcd/: lcd_api.py  machine_i2c_lcd.py  test_display.py
gateway/: pyproject.toml
gateway/config/: config.yaml
gateway/notebooks/: wl_gateway.ipynb
gateway/src/wl_monitor/: main_publish.py  mqtt_client.py  publisher.py  wl_api.py
